@startuml

title __CONTROLLERS's Class Diagram__\n

  package nl.han.dea.marijn.controllers {
    class LoginController {
        + login()
    }
  }
  

  package nl.han.dea.marijn.controllers {
    class SubscriptionController {
        + getAbonnement()
        + setActiveSubscriptionInactive()
        + doublePrice()
        - individualActiveSubscription()
    }
  }
  

  package nl.han.dea.marijn.controllers {
    class SubscriptionsController {
        + abonnementen()
        + addAbonnement()
        + searchAllSubscriptions()
        - giveUserSubscriptionList()
    }
  }
  

  package nl.han.dea.marijn.controllers {
    class UserController {
        + allAbonnees()
        + sharingIsCaring()
    }
  }
  

  LoginController o-- LoginService : loginService
  SubscriptionController o-- SubscriptionService : subscriptionService
  SubscriptionsController o-- SubscriptionService : subscriptionsService
  UserController o-- UserService : userService
  UserController o-- SubscriptionService : subscriptionService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
